--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+cache/
+_test/
+model_development/
+models/
+EOTWTV_env/
+misc/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
